# ESOGU-HARMONY

./: README.md
Universal_Robots_ROS2_Description/: package.xml
Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
Universal_Robots_ROS2_Description/urdf/: simrobot_ur.ros2_control.xacro  simrobot_ur_macro.xacro
Universal_Robots_ROS2_Tutorials/my_robot_cell/my_robot_cell_control/: CMakeLists.txt
Universal_Robots_ROS2_Tutorials/my_robot_cell/my_robot_cell_control/config/: whole_cell_sim_controllers.yaml
Universal_Robots_ROS2_Tutorials/my_robot_cell/my_robot_cell_control/launch/: hil_test.launch.py  hil_test_whole.launch.py  hil_test_whole_unified.launch.py  sensing_and_cleaning_mission.launch.py  sensing_and_cleaning_mission_v3.launch.py  start_robot.launch.py
Universal_Robots_ROS2_Tutorials/my_robot_cell/my_robot_cell_control/scripts/: usb_camera_node.py
Universal_Robots_ROS2_Tutorials/my_robot_cell/my_robot_cell_control/src/: real_to_sim_bridge.cpp  sim_to_real_bridge.cpp
Universal_Robots_ROS2_Tutorials/my_robot_cell/my_robot_cell_control/urdf/: my_robot_cell_controlled.urdf.xacro  whole_cell_real.urdf.xacro  whole_cell_sim.urdf.xacro
agv_nodes/: package.xml  setup.cfg  setup.py
agv_nodes/agv_nodes/: agv_controller_node.py  bridge_node.py  movement_node.py  position_node.py
agv_nodes/launch/: agv_nodes.launch.py
deneme_mobil_manipulator/: .setup_assistant  CMakeLists.txt  package.xml
deneme_mobil_manipulator/config/: robot.srdf  (+4 more)
gripper_test/: CMakeLists.txt  package.xml
gripper_test/config/: gripper_controller.yaml
gripper_test/launch/: gripper_test.launch.py  view_gripper.launch.py
gripper_test/meshes/: gripper_body_1.stl  gripper_lower_1.stl  gripper_upper_1.stl
gripper_test/urdf/: gripper.xacro.urdf  gripper_macro.xacro
gz_ros2_control/: .pre-commit-config.yaml
ifarlab_gazebo/: CMakeLists.txt  combined.urdf  package.xml
pymoveit2_kawasaki_sim/: CMakeLists.txt
pymoveit2_real/: CMakeLists.txt
pymoveit2_sim/: CMakeLists.txt
ros2_kafka_bridge/: setup.cfg
sim_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sim_ifarlab_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
whole_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
yolo_ros/: test_detect.py
(+112 files in other folders)
